• Fix extra spacing issue. ( Koor Web )

--- a/src/pages/jobs/jobDetails/styles.module.css
+++ b/src/pages/jobs/jobDetails/styles.module.css
@@ -118,7 +118,7 @@
 }
 
 .jobpostbtn {
-  padding-top: 30px;
+  padding-top: 10px;
   text-align: center;
 }
 
